fix(skore): Improve contrast of dark theme mode

--- a/skore/src/skore/_utils/repr/theme.css
+++ b/skore/src/skore/_utils/repr/theme.css
@@ -15,12 +15,12 @@
 .container[data-theme="dark"],
 :host(.dark-theme),
 :host([data-theme="dark"]) {
-    --color-blue: #6b42f6;
+    --color-blue: #56B4DC;
     --color-orange: #f97316;
     --color-text: #fff;
-    --color-background: #000;
+    --color-background: #0F0F0F;
     --color-orange-hover: rgba(249, 115, 22, 0.2);
-    --color-blue-hover: rgba(107, 66, 246, 0.2);
+    --color-blue-hover: rgba(86, 180, 220, 0.2);
     --color-row-stripe: rgba(255, 255, 255, 0.08);
 }
 
